# grocery-automation

./: .gitignore  AGENTS.md  COMMIT_MSG.txt  README.md  STATUS.md  pyproject.toml
data/: fuzzy_match_items.html  products.json  products.json.bak  substitutions.json  unmapped_items.html
src/grocery/: __init__.py  run.py  server.py
src/grocery/static/: phase3.html
src/grocery/tools/: __init__.py  errors.py  fuzzy_ui.py  gtasks.py  hyvee.py  library.py  unavailable.py
src/grocery_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scripts/: cleanup_products.py
tests/: conftest.py  test_error_formatting.py  test_gtasks_auth_failfast.py  test_gtasks_complete.py  test_gtasks_fetch.py  test_gtasks_normalize.py  test_hyvee_cart_tools.py  test_hyvee_login.py  test_hyvee_search.py  test_library_tools.py  test_orchestrator_dry_run.py  test_orchestrator_non_dry_run.py  test_unavailable_log.py
