[project]
name = "grocery-automation"
version = "0.1.0"
description = "Google Tasks to Hy-Vee cart automation"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "playwright",
]

[project.scripts]
grocery-run = "grocery.run:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "flask",
  "flask-cors",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"


